--- a/koa_mobile_animate/public/stylesheets/nav.less
+++ b/koa_mobile_animate/public/stylesheets/nav.less
@@ -41,7 +41,7 @@ nav{
 			display: block;
 			height: 0;
 			overflow: hidden;
-			// transition:height 0.3s linear;
+			transition:height 0.3s linear;
 			li{
 				line-height: 1.0rem;
 				background-color: #00a3e5;
